0.83.1
  - Minimum MCB free default changed to better reflect
    a typical MS-DOS setup with minimal to no drivers.
    This should result in a report of 600K-ish memory
    free, which is equivalent to Windows 95 without
    anything loaded except COMMAND.COM.
  - Various improvements to DEL and COPY commands, e.g.
    fixed the DEL /P option having no effect, and "DEL ."
    deleted all files in the current directory silently;
    the COPY command now asks for confirmation before
    overwriting files, and it now supports /Y and /-Y
    options to change this behavior, which can also be
    set from the COPYCMD environment variable. (Wengier)
  - Added support for DOS programs to communicate
    with the clipboard in Windows builds. If the
    "dos clipboard device enable" setting in
    dosbox.conf is set to "true" or "full", a DOS
    device (default name: CLIP$) will be added to
    allow bidirectional communications with the
    clipboard (e.g. "DIR >CLIP$" will write the
    output to the clipboard, and "TYPE CLIP$" will
    show the clipboard contents). Alternatively,
    you can set it to "read" or "write" to allow
    only read or write access for security reasons.
    The DOS device name can also be changed with
    the "dos clipboard device name" setting in
    dosbox.conf. (Wengier)
  - Updated the PasteClipboard feature to support
    Unicode text translations. (Wengier)
  - Long filename support added, adapted from
    the vDosPlus project. It will be enabled with
    an initial DOS version of 7.0 or higher. (Wengier)
  - Corrected return value when using option to
    fake the installation of SHARE. (Allofich)
  - Added code to EMS emulation to print specific
    debug information when a PC-98 specific call is
    made to remap segment B000h to either system
    memory or video memory. I do not have enough
    test cases or a setup to test what really happens,
    so it will remain a debug message for now.